# HighLoad

./: .gitmodules
dz1/: README.md  logical_bd_scheme.txt
dz2/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.nginx  README.md  httpd.conf  nginx.conf
dz2/include/handler/: handler.h
dz2/include/http/: http_constants.h  http_exception.h  request.h  response.h
dz2/include/server/: server.h
dz2/src/: main.cpp
dz2/src/handler/: handler.cpp
dz2/src/http/: request.cpp  response.cpp
dz2/src/server/: server.cpp
dz2/tests/: http_request_tests.cpp
dz3/balancer/: docker-compose.yaml  nginx.conf  prometheus.yaml
dz3/metrics/: docker-compose.yaml  prometheus.yaml
dz3/server/: docker-compose.yaml  go.mod  go.sum
dz3/server/cmd/: main.go
dz3/server/internal/api/: monitoring.go  root.go
